<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_esai">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soal_1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:id="@+id/jawab_esai_1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="16dp"
            android:layout_marginBottom="16dp"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soal_2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:id="@+id/jawab_esai_2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="16dp"
            android:layout_marginBottom="16dp"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soal_3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:id="@+id/jawab_esai_3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="16dp"
            android:layout_marginBottom="16dp"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soal_4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:id="@+id/jawab_esai_4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="16dp"
            android:layout_marginBottom="16dp"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soal_5" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:id="@+id/jawab_esai_5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="16dp"
            android:layout_marginBottom="16dp"></LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Simpan Jawaban"
            android:id="@+id/simpan"
            android:gravity="right"
            android:layout_gravity="right"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>