<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="top"
        android:id="@+id/homeBar"
        android:background="@color/colorPrimary">
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_margin="32dp"
        android:layout_height="wrap_content"
        android:text="Materi Larutan NaCL dalam kimia"
        android:textSize="32sp"
        android:id="@+id/titleBar"
        android:paddingTop="48dp"
        android:textColor="@color/colorBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/homeBar" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleBar"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/button_materi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@color/colorBox"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/poin_a" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/poin_a_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="Bertindak Kreatif"
                    android:layout_gravity="start"
                    android:textColor="@android:color/white"
                    android:layout_margin="10dp"
                    android:padding="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="Mengamati Laju Reaksi"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_marginBottom="10dp"
                        android:text="@string/text1"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/soal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_marginBottom="10dp"
                        android:text="@string/text2"/>

                    <Button
                        android:id="@+id/jawab_2"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jawab" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/text3"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="15dp"
                        android:text="@string/text3a"
                        android:layout_marginLeft="15dp" />

                    <Button
                        android:id="@+id/jawab_3a"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jawab" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="15dp"
                        android:text="@string/text3b"
                        android:layout_marginLeft="15dp" />

                    <Button
                        android:id="@+id/jawab_3b"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jawab" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="15dp"
                        android:text="@string/text3c"
                        android:layout_marginLeft="15dp" />

                    <Button
                        android:id="@+id/jawab_3c"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jawab" />

                </LinearLayout>

                <WebView
                    android:id="@+id/materi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="Bertindak Kreatif"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_marginBottom="10dp"
                        android:text="@string/text4"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_marginBottom="10dp"
                        android:text="@string/text5"/>

                    <Button
                        android:id="@+id/jawab4"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jawab" />

                </LinearLayout>

                <WebView
                    android:id="@+id/materi2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>